Bezpecnost - random navstevnik ted nema pristup k profilum uzivatelu, lepe umistene prihlasovani a nastroje, lepsi usporadani prvku v layoutu

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -63,11 +63,12 @@ article_actions = Možnosti
 #clanky
 button_article_detail = Detail článku
 no_articles_found = Žádné články nebyly nalezeny
-article_category = Témata:
+article_category = Témata
 article_images = Obrázky:
 article_author = Přidáno uživatelem:
 article_text = Text článku:
 article_comments = Komentáře:
+article_last_edited = Naposledy upraveno:
 article_success = Článek byl úspěšně vytvořen
 button_new_article = Vytvořit článek
 
