Uprava vyhledavani, oprava zmeny clanku, stylovani vyhledavani

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,6 +36,7 @@ action_delete = Smazat
 headline_registration = Registrace nového uživatele
 headline_add_or_edit_article = Přidat / Upravit článek
 headline_user_profile = Profil uživatele
+headline_login = Přihlašte se
 
 
 #prihlasovani uzivatelu a registrace
