Vypis clanku na tema, uprevene vysledky vyhledavani, vylepsena uvodni strana

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,16 +12,21 @@ footer_text = &copy; Company 2017-2018
 
 
 #polozky menu
-menu_item_register = Registrovat
+menu_item_register = Registrovat se
 menu_item_login = Přihlásit se
 menu_item_logout = Odhlásit se
 menu_item_profile = Můj profil
 menu_item_insert_article = Vložit článek
+menu_item_latest = Nejnovější články
 
 
 #vyhledavaci pole
 search_placeholder = Vyhledat článek
 search_button = Hledat
+
+#vysledky vyhledavani
+search_quote_left = „
+search_quote_right = “
 
 
 #spolecne prvky pro vice polozek
@@ -37,6 +42,8 @@ headline_registration = Registrace nového uživatele
 headline_add_or_edit_article = Přidat / Upravit článek
 headline_user_profile = Profil uživatele
 headline_login = Přihlašte se
+headline_articles_on_topic = Články na téma
+headline_search_results = Výsledky vyhledávání
 
 
 #prihlasovani uzivatelu a registrace
@@ -62,9 +69,9 @@ article_actions = Možnosti
 
 
 #clanky
-button_article_detail = Detail článku
 no_articles_found = Žádné články nebyly nalezeny
-article_category = Témata
+article_topics = Témata
+article_topic = Zařadit článek k tématu
 article_images = Obrázky:
 article_author = Přidáno uživatelem:
 article_text = Text článku:
@@ -72,6 +79,7 @@ article_comments = Komentáře:
 article_last_edited = Naposledy upraveno:
 article_success = Článek byl úspěšně vytvořen
 button_new_article = Vytvořit článek
+button_show_article = Zobrazit článek
 
 
 #strankovani
