Oprava padu profilu, pridany upravy clanku a nadpisy u vyhledavani v kategoriích

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -42,7 +42,7 @@ headline_registration = Registrace nového uživatele
 headline_add_or_edit_article = Přidat / Upravit článek
 headline_user_profile = Profil uživatele
 headline_login = Přihlašte se
-headline_articles_on_topic = Články na téma
+headline_articles_on_topic = Články na téma 
 headline_search_results = Výsledky vyhledávání
 
 
@@ -80,7 +80,7 @@ article_last_edited = Naposledy upraveno:
 article_success = Článek byl úspěšně vytvořen
 button_new_article = Vytvořit článek
 button_show_article = Zobrazit článek
-
+edit_article = Upravit článek
 
 #strankovani
 pagination_previous = Předchozí
