Vytvorena stranka pro error 404 a pridany redirecty na danou stranku

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -92,3 +92,6 @@ button_add_comment = Přidat komentář
 comment_field_placeholder = Zde můžete napsat komentář
 comment_form_disabled = Komentovat mohou pouze přihlášení uživatelé.
 
+#error
+error_back_to_index = Návrat na hlavní stranu
+
