Pridano zobrazovani grafovych struktur, sekce Algoritmy, opravy layoutu

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,8 +16,9 @@ menu_item_register = Registrovat se
 menu_item_login = Přihlásit se
 menu_item_logout = Odhlásit se
 menu_item_profile = Můj profil
-menu_item_insert_article = Vložit článek
+menu_item_insert_article = Přidat článek
 menu_item_latest = Nejnovější články
+menu_item_algorithm = Algoritmy
 
 
 #vyhledavaci pole
@@ -31,7 +32,7 @@ search_quote_right = “
 
 #spolecne prvky pro vice polozek
 button_cancel = Zrušit
-button_back_to_homepage = Zpátky na výchozí stránku
+button_back_to_homepage = Návrat na hlavní stránku
 button_detail = Zjistit více
 action_edit = Upravit
 action_delete = Smazat
@@ -42,8 +43,10 @@ headline_registration = Registrace nového uživatele
 headline_add_or_edit_article = Přidat / Upravit článek
 headline_user_profile = Profil uživatele
 headline_login = Přihlašte se
-headline_articles_on_topic = Články na téma 
+headline_articles_on_topic = Články na téma
 headline_search_results = Výsledky vyhledávání
+headline_error = Oops, něco se pokazilo!
+headline_algorithm = Algoritmus na grafu – vzorová stránka
 
 
 #prihlasovani uzivatelu a registrace
@@ -92,6 +95,12 @@ button_add_comment = Přidat komentář
 comment_field_placeholder = Zde můžete napsat komentář
 comment_form_disabled = Komentovat mohou pouze přihlášení uživatelé.
 
-#error
+
+#chybova stranka
 error_back_to_index = Návrat na hlavní stranu
 
+
+#algoritmy
+algorithm_tab_description = Slovní popis
+algorithm_tab_pseudocode = Pseudokód
+algorithm_tab_example = Příklad
