Oprava a rozšíření testů, drobné opravy uvnitř aplikace a UI

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,6 +25,7 @@ menu_item_algorithm = Algoritmy
 search_placeholder = Vyhledat článek
 search_button = Hledat
 
+
 #vysledky vyhledavani
 search_quote_left = „
 search_quote_right = “
@@ -66,7 +67,7 @@ button_login = Přihlásit se
 
 #profil uzivatele
 registration_date = Datum registrace
-user_articles = Vytvořené články
+user_articles = Přidané články
 article_headline = Nadpis článku
 article_actions = Možnosti
 
@@ -80,10 +81,11 @@ article_author = Přidáno uživatelem:
 article_text = Text článku:
 article_comments = Komentáře:
 article_last_edited = Naposledy upraveno:
-article_success = Článek byl úspěšně vytvořen
-button_new_article = Vytvořit článek
+article_success = Článek byl úspěšně publikován
+button_new_article = Publikovat článek
 button_show_article = Zobrazit článek
 edit_article = Upravit článek
+
 
 #strankovani
 pagination_previous = Předchozí
