--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,3 +1,1 @@
-button_new_article=Vytvořit článek
-headline = Willkommen auf meiner Seite!
-intro_text = Dies ist meine deutsche Einleitung.
+headline_app_title = Graphentheorie
