Pridano mazani komentaru

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -94,6 +94,7 @@ pagination_next = Následující
 
 #komentare
 button_add_comment = Přidat komentář
+button_delete_comment = Smazat komentář
 comment_field_placeholder = Zde můžete napsat komentář
 comment_form_disabled = Komentovat mohou pouze přihlášení uživatelé.
 
