Pridana upozorneni (success a error)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -38,6 +38,8 @@ button_detail = Zjistit více
 action_edit = Upravit
 action_delete = Smazat
 
+#chybove hlasky
+message_error = Něco se pokazilo
 
 #nadpisy jednotlivych sekci
 headline_registration = Registrace nového uživatele
@@ -61,6 +63,8 @@ last_name = Příjmení
 phone = Mobil
 registration_requied_fields = Pole označená * jsou povinná
 registration_success = Registrace byla úspěšně dokončena
+registration_message_try_again = Pravděpodobně jste zadali uživatelské jméno, které si vybral už někdo před Vámi. Zkuste se registrovat znovu s jiným uživatelským jménem. 
+registration_message_welcome = Registrovaní uživatelé mohou spravovat obsah webu, diskutovat pod články a již brzy využívat i další plánované funkce.
 button_register = Zaregistrovat se
 button_login = Přihlásit se
 
@@ -81,8 +85,9 @@ article_author = Přidáno uživatelem:
 article_text = Text článku:
 article_comments = Komentáře:
 article_last_edited = Naposledy upraveno:
-article_success = Článek byl úspěšně publikován
-button_new_article = Publikovat článek
+article_new_success = Článek byl úspěšně publikován
+article_deleted = Článek byl smazán
+button_publish_article = Publikovat článek
 button_show_article = Zobrazit článek
 edit_article = Upravit článek
 
