Nova stranka pro zobrazeni grafu

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -49,7 +49,7 @@ headline_login = Přihlašte se
 headline_articles_on_topic = Články na téma
 headline_search_results = Výsledky vyhledávání
 headline_error = Oops, něco se pokazilo!
-headline_algorithm = Algoritmus na grafu – vzorová stránka
+headline_algorithm = Edmonds-Johnsonův algoritmus
 
 
 #prihlasovani uzivatelu a registrace
@@ -111,4 +111,5 @@ error_back_to_index = Návrat na hlavní stranu
 #algoritmy
 algorithm_tab_description = Slovní popis
 algorithm_tab_pseudocode = Pseudokód
-algorithm_tab_example = Příklad
+algorithm_tab_demo = Ukázka
+algorithm_tab_examples = Příklady
