Pridano ukladani javascriptovych grafu a vlozeny inicializacni clanky

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,6 +17,7 @@ menu_item_login = Přihlásit se
 menu_item_logout = Odhlásit se
 menu_item_profile = Můj profil
 menu_item_insert_article = Přidat článek
+menu_item_insert_graph = Přidat graf
 menu_item_latest = Nejnovější články
 menu_item_algorithm = Algoritmy
 
@@ -33,13 +34,16 @@ search_quote_right = “
 
 #spolecne prvky pro vice polozek
 button_cancel = Zrušit
+button_upload = Nahrát
 button_back_to_homepage = Návrat na hlavní stránku
 button_detail = Zjistit více
 action_edit = Upravit
 action_delete = Smazat
 
+
 #chybove hlasky
 message_error = Něco se pokazilo
+
 
 #nadpisy jednotlivych sekci
 headline_registration = Registrace nového uživatele
@@ -113,3 +117,8 @@ algorithm_tab_description = Slovní popis
 algorithm_tab_pseudocode = Pseudokód
 algorithm_tab_demo = Ukázka
 algorithm_tab_examples = Příklady
+
+
+#Grafy
+file_name = Nazev grafu
+choose_graph = Vyberte javascriptovy soubor
