Rozsireni back i front endu pro zpracovani grafu

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -47,7 +47,8 @@ message_error = Něco se pokazilo
 
 #nadpisy jednotlivych sekci
 headline_registration = Registrace nového uživatele
-headline_add_or_edit_article = Přidat / Upravit článek
+headline_article_editor = Přidat / Upravit článek
+headline_graph_editor = Přidat nový graf
 headline_user_profile = Profil uživatele
 headline_login = Přihlašte se
 headline_articles_on_topic = Články na téma
@@ -84,6 +85,7 @@ article_actions = Možnosti
 no_articles_found = Žádné články nebyly nalezeny
 article_topics = Témata
 article_topic = Zařadit článek k tématu
+article_name = Název článku
 article_images = Obrázky:
 article_author = Přidáno uživatelem:
 article_text = Text článku:
@@ -119,6 +121,7 @@ algorithm_tab_demo = Ukázka
 algorithm_tab_examples = Příklady
 
 
-#Grafy
-file_name = Nazev grafu
-choose_graph = Vyberte javascriptovy soubor
+#grafy
+graph_name = Název grafu
+graph_file = Vyberte javascriptový soubor
+graph_new_success = Graf byl úspěšně publikován
