Pridan autor ke grafum, zmena vypisu clanku

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,7 +4,7 @@ app_title_browser = DimaApplication
 
 #nazev aplikace
 headline_app_title = Teorie grafů
-app_description = Semestrální práce na předmět PPRO. This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.
+app_description = Semestrální práce na předmět PPRO
 
 
 #zapati
@@ -20,6 +20,7 @@ menu_item_insert_article = Přidat článek
 menu_item_insert_graph = Přidat graf
 menu_item_latest = Nejnovější články
 menu_item_algorithm = Algoritmy
+menu_item_articleLatest = Nejnovejsi prispevky
 
 
 #vyhledavaci pole
@@ -36,7 +37,7 @@ search_quote_right = “
 button_cancel = Zrušit
 button_upload = Nahrát
 button_back_to_homepage = Návrat na hlavní stránku
-button_detail = Zjistit více
+button_detail = Přejít na nejnovější články
 action_edit = Upravit
 action_delete = Smazat
 
