Nova hlavni strana, prehlednejsi zpracovani temat do menu, drobne opravy

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,7 +4,7 @@ app_title_browser = DimaApplication
 
 #nazev aplikace
 headline_app_title = Teorie grafů
-app_description = Semestrální práce na předmět PPRO
+app_description = Semestrální práce na předmět PPRO. This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.
 
 
 #zapati
@@ -20,7 +20,6 @@ menu_item_insert_article = Přidat článek
 menu_item_insert_graph = Přidat graf
 menu_item_latest = Nejnovější články
 menu_item_algorithm = Algoritmy
-menu_item_articleLatest = Nejnovejsi prispevky
 
 
 #vyhledavaci pole
@@ -37,7 +36,7 @@ search_quote_right = “
 button_cancel = Zrušit
 button_upload = Nahrát
 button_back_to_homepage = Návrat na hlavní stránku
-button_detail = Přejít na nejnovější články
+button_detail = Zjistit více
 action_edit = Upravit
 action_delete = Smazat
 
@@ -53,6 +52,7 @@ headline_graph_editor = Přidat nový graf
 headline_user_profile = Profil uživatele
 headline_login = Přihlašte se
 headline_articles_on_topic = Články na téma
+headline_articles_latest = Nejnovější články
 headline_search_results = Výsledky vyhledávání
 headline_error = Oops, něco se pokazilo!
 headline_algorithm = Edmonds-Johnsonův algoritmus
@@ -109,10 +109,6 @@ button_add_comment = Přidat komentář
 button_delete_comment = Smazat komentář
 comment_field_placeholder = Zde můžete napsat komentář
 comment_form_disabled = Komentovat mohou pouze přihlášení uživatelé.
-
-
-#chybova stranka
-error_back_to_index = Návrat na hlavní stranu
 
 
 #algoritmy
