Oprava menu, zobrazovani grafu a jejich mazani v profilu uzivatele, opravy

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -74,13 +74,13 @@ registration_message_welcome = Registrovaní uživatelé mohou spravovat obsah w
 button_register = Zaregistrovat se
 button_login = Přihlásit se
 
-
 #profil uzivatele
 registration_date = Datum registrace
 user_articles = Přidané články
+user_graphs = Přidané grafy
 article_headline = Nadpis článku
 article_actions = Možnosti
-
+graph_headline = Nazev grafu
 
 #clanky
 no_articles_found = Žádné články nebyly nalezeny
