Rozsireni, upravy a ucesani sablony

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,13 +2,13 @@
 app_title_browser = DimaApplication
 
 
-#nazev aplikace
+#hlavni strana
 headline_app_title = Teorie grafů
-app_description = Semestrální práce na předmět PPRO. This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.
-
+index_app_description = Semestrální práce na předmět PPRO. This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something unique.
+index_team_description = Poznejty ty, kteří mají na této semestrální práci zásluhy.
 
 #zapati
-footer_text = &copy; Company 2017-2018
+footer_text = &copy; 2018
 
 
 #polozky menu
@@ -20,11 +20,13 @@ menu_item_insert_article = Přidat článek
 menu_item_insert_graph = Přidat graf
 menu_item_latest = Nejnovější články
 menu_item_algorithm = Algoritmy
+menu_item_team = Náš tým
 
 
 #vyhledavaci pole
 search_placeholder = Vyhledat článek
 search_button = Hledat
+search_message_try_again = Omlouváme se, ale nebyly nalezeny žádné výsledky. Zkuste prosím opakovat vyhledávání s jinými klíčovými slovy.
 
 
 #vysledky vyhledavani
@@ -51,7 +53,6 @@ headline_article_editor = Přidat / Upravit článek
 headline_graph_editor = Přidat nový graf
 headline_user_profile = Profil uživatele
 headline_login = Přihlašte se
-headline_articles_on_topic = Články na téma
 headline_articles_latest = Nejnovější články
 headline_search_results = Výsledky vyhledávání
 headline_error = Oops, něco se pokazilo!
@@ -69,10 +70,11 @@ last_name = Příjmení
 phone = Mobil
 registration_requied_fields = Pole označená * jsou povinná
 registration_success = Registrace byla úspěšně dokončena
-registration_message_try_again = Pravděpodobně jste zadali uživatelské jméno, které si vybral už někdo před Vámi. Zkuste se registrovat znovu s jiným uživatelským jménem. 
+registration_message_try_again = Pravděpodobně jste zadali uživatelské jméno, které si vybral už někdo před Vámi. Zkuste se registrovat znovu s jiným uživatelským jménem.
 registration_message_welcome = Registrovaní uživatelé mohou spravovat obsah webu, diskutovat pod články a již brzy využívat i další plánované funkce.
 button_register = Zaregistrovat se
 button_login = Přihlásit se
+
 
 #profil uzivatele
 registration_date = Datum registrace
@@ -81,6 +83,7 @@ user_graphs = Přidané grafy
 article_headline = Nadpis článku
 article_actions = Možnosti
 graph_headline = Nazev grafu
+
 
 #clanky
 no_articles_found = Žádné články nebyly nalezeny
