Upravy modelu, rozsireni Grafu o popis, testovaci data

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,7 +4,7 @@ app_title_browser = DimaApplication
 
 #hlavni strana
 headline_app_title = Teorie grafů
-index_app_description = Semestrální práce na předmět PPRO. This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something unique.
+index_app_description = Semestrální práce na předmět PPRO
 index_team_description = Poznejty ty, kteří mají na této semestrální práci zásluhy.
 
 #zapati
@@ -53,6 +53,7 @@ headline_article_editor = Přidat / Upravit článek
 headline_graph_editor = Přidat nový graf
 headline_user_profile = Profil uživatele
 headline_login = Přihlašte se
+headline_articles_on_topic = Téma
 headline_articles_latest = Nejnovější články
 headline_search_results = Výsledky vyhledávání
 headline_error = Oops, něco se pokazilo!
@@ -67,7 +68,6 @@ password_not_match = Zadaná hesla se neshodují
 email = Emailová adresa
 first_name = Jméno
 last_name = Příjmení
-phone = Mobil
 registration_requied_fields = Pole označená * jsou povinná
 registration_success = Registrace byla úspěšně dokončena
 registration_message_try_again = Pravděpodobně jste zadali uživatelské jméno, které si vybral už někdo před Vámi. Zkuste se registrovat znovu s jiným uživatelským jménem.
@@ -123,5 +123,6 @@ algorithm_tab_examples = Příklady
 
 #grafy
 graph_name = Název grafu
-graph_file = Vyberte javascriptový soubor
+graph_description = Popis (nepovinný)
+graph_file = Vyberte soubor s grafem
 graph_new_success = Graf byl úspěšně publikován
