Opraven redirect u vytvoření článku, loginu a registrace, přidán aritcleId pro graf, drobné úpravy

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -38,7 +38,7 @@ search_quote_right = “
 button_cancel = Zrušit
 button_upload = Nahrát
 button_back_to_homepage = Návrat na hlavní stránku
-button_detail = Zjistit více
+button_detail = Přejít na články
 action_edit = Upravit
 action_delete = Smazat
 
