--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,8 @@ app_title_browser = DimaApplication
 headline_app_title = Teorie grafů
 index_app_description = Semestrální práce na předmět PPRO
 index_team_description = Poznejty ty, kteří mají na této semestrální práci zásluhy.
+button_detail = Přejít na články
+
 
 #zapati
 footer_text = &copy; 2018
@@ -15,7 +17,7 @@ footer_text = &copy; 2018
 menu_item_register = Registrovat se
 menu_item_login = Přihlásit se
 menu_item_logout = Odhlásit se
-menu_item_profile = Můj profil
+menu_item_profile = Administrace
 menu_item_insert_article = Přidat článek
 menu_item_insert_graph = Přidat graf
 menu_item_latest = Nejnovější články
@@ -38,7 +40,6 @@ search_quote_right = “
 button_cancel = Zrušit
 button_upload = Nahrát
 button_back_to_homepage = Návrat na hlavní stránku
-button_detail = Přejít na články
 action_edit = Upravit
 action_delete = Smazat
 
@@ -51,7 +52,7 @@ message_error = Něco se pokazilo
 headline_registration = Registrace nového uživatele
 headline_article_editor = Přidat / Upravit článek
 headline_graph_editor = Přidat nový graf
-headline_user_profile = Profil uživatele
+headline_user_dashboard = Nástěnka
 headline_login = Přihlašte se
 headline_articles_on_topic = Téma
 headline_articles_latest = Nejnovější články
@@ -76,14 +77,21 @@ button_register = Zaregistrovat se
 button_login = Přihlásit se
 
 
-#profil uzivatele
+#admin dashboard
 registration_date = Datum registrace
 user_articles = Přidané články
 user_graphs = Přidané grafy
-article_headline = Nadpis článku
+user_detail = Info o uživateli
+article_headline = Název článku
+timestamp = Datum přidání
+description = Popis
+created_by = Přidáno uživatelem
 article_actions = Možnosti
-graph_headline = Nazev grafu
-
+graph_headline = Název grafu
+admin_menu_homepage = Domovká stránka
+admin_menu_articles = Články
+admin_menu_graphs = Grafy
+admin_menu_user = Uživatel
 
 #clanky
 no_articles_found = Žádné články nebyly nalezeny
@@ -126,3 +134,4 @@ graph_name = Název grafu
 graph_description = Popis (nepovinný)
 graph_file = Vyberte soubor s grafem
 graph_new_success = Graf byl úspěšně publikován
+
