Nova sekce na hlavni strane + upravy aplikace kvuli lokalizaci

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,12 +1,13 @@
 #nazev aplikace zobrazovany v zalozce prohlizece
-app_title_browser = DimaApplication
+app_title_browser = Teorie grafů
 
 
 #hlavni strana
 headline_app_title = Teorie grafů
-index_app_description = Semestrální práce na předmět PPRO
-index_team_description = Poznejty ty, kteří mají na této semestrální práci zásluhy.
+index_app_description = Moderně, zábavně a názorně!
+index_features_description = Naučte se teorii grafů moderně a zábavně!
 button_detail = Přejít na články
+# sekce funkce tu neni, protoze to byl jenom nastrel na prezentaci projektu. Finalni layout hlavni strany byl v planu uplne jiny.
 
 
 #zapati
@@ -22,7 +23,6 @@ menu_item_insert_article = Přidat článek
 menu_item_insert_graph = Přidat graf
 menu_item_latest = Nejnovější články
 menu_item_algorithm = Algoritmy
-menu_item_team = Náš tým
 
 
 #vyhledavaci pole
@@ -59,6 +59,7 @@ headline_articles_latest = Nejnovější články
 headline_search_results = Výsledky vyhledávání
 headline_error = Oops, něco se pokazilo!
 headline_algorithm = Edmonds-Johnsonův algoritmus
+headline_features = Funkce
 
 
 #prihlasovani uzivatelu a registrace
@@ -135,4 +136,3 @@ graph_name = Název grafu
 graph_description = Popis (nepovinný)
 graph_file = Vyberte soubor s grafem
 graph_new_success = Graf byl úspěšně publikován
-
